{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player Controls",
            "id": "9620f8f0-94d6-45fa-9511-f31164a0eec1",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "a92f7ee5-7f0c-4628-8490-ab6d0566d4c5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Skill1",
                    "type": "Button",
                    "id": "8078394f-5189-42b8-92e3-7b40c0ada227",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Skill2",
                    "type": "Button",
                    "id": "c8fd3e4d-95a9-4b60-aac5-00da13c78fdf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Skill3",
                    "type": "Button",
                    "id": "3877be13-7f3f-4edc-9060-e11c25fd1f9f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Skill4",
                    "type": "Button",
                    "id": "c5e72c4f-fd65-47b6-abb8-fb2a1f10dc41",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Join",
                    "type": "Button",
                    "id": "27010ca8-c3a0-4a85-a401-8b1e326eaf98",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Fusion",
                    "type": "Button",
                    "id": "331cfa56-ff96-4c9c-bf6f-0e030854a353",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "922bdfd2-1d7f-41df-a612-ed8b7ec6d7bc",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "94dd17a1-b3d5-4516-a7fb-c2f84cb9d754",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "da8097f0-4641-449a-a7aa-1439a14f848d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0acb5735-bcec-45c9-b77b-ed354e4aaf47",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e78cd7ff-a9b1-491b-ae01-3275f9d88eb4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "4f902478-f2f5-4062-9612-41f8fb8d7d26",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "69b7adc3-899f-4610-a448-783b5a91f3c3",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick Generic",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24f4d805-5a57-4718-85b6-b8cd52a83150",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Skill1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "230c8d11-2cc6-4898-8e4f-d9433e2d5919",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Skill1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54dcf680-dce5-4e55-8d59-14acad3941bd",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick Generic",
                    "action": "Skill1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d4040b5d-8204-4f2a-9400-8a76d0ab3347",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Skill2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b2dea941-5aac-4acd-bfdc-021bfd0ac950",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Skill2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1708d5cf-16a3-4659-9c6c-eb37c3b6f39e",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/button4",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick Generic",
                    "action": "Skill2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14f45690-1b8b-4edc-bc06-5b9366a266bc",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Skill3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8cc949b0-5560-478e-82d2-e8aaac579d38",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Skill3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "68638d57-93b5-48f9-9b55-f05add1e9d49",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick Generic",
                    "action": "Skill3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aae2f359-ace9-4ba5-b070-be82b7bab5df",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Skill4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "105570ff-dab0-4ebb-9063-26691c2c2053",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Skill4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "529dea02-d629-4c98-a37c-36870b1aab37",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick Generic",
                    "action": "Skill4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb9f1541-515a-4e68-bfa7-6e0dfd52c6ee",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Join",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3a8ab3b-821e-4a72-a591-1e0eaeb4119b",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/button10",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick Generic",
                    "action": "Join",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ec3b153-52c9-45da-80f0-378c7178302e",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Join",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2290629-df56-471d-b548-60bb4e1c03ca",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Fusion",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "552a267a-a177-4c5e-88be-04049372da8c",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/button6",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick Generic",
                    "action": "Fusion",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "5a58df60-3509-465b-92fb-c04d1b62d458",
            "actions": [
                {
                    "name": "SelectRight",
                    "type": "Button",
                    "id": "f3aa64f7-dd25-486a-9348-5c7167540f11",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SelectLeft",
                    "type": "Button",
                    "id": "6382d3aa-a3bd-47bb-a8b2-0c5f6dfd058e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StartGame",
                    "type": "Button",
                    "id": "4ab9323c-46dd-4227-a09e-48421ba3ccd6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "060b5cc0-dec7-492f-b14a-3a18042196ed",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "SelectRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3bbc8c5-9807-47a0-82d0-b0b12ecde093",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/stick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick Generic",
                    "action": "SelectRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f151ea5-cf4e-49d6-8076-cb83ede73cb2",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "SelectRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc05e481-d08f-4904-aa2e-036af3f0150f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "SelectLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bf686924-d08e-4f81-8f8e-bcb60d66eb31",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/stick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick Generic",
                    "action": "SelectLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa931c77-5b50-4732-b308-98fed86a7a36",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "SelectLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e44c4bb-7d78-4d16-b5e2-8233788cf437",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "StartGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14fa8eb3-6441-4f59-92d5-5b6460e98ff4",
                    "path": "<HID::DragonRise Inc.   Generic   USB  Joystick  >/button10",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick Generic",
                    "action": "StartGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bdb0f23e-fdeb-4305-a621-a8c968ea5d66",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "StartGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Joystick Generic",
            "bindingGroup": "Joystick Generic",
            "devices": [
                {
                    "devicePath": "<HID::DragonRise Inc.   Generic   USB  Joystick  >",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}